stripping out and cleaning up template

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 
 # Site settings
-title: Sam Personal Development
+title: Personal Development Progress Tracker
 email: hello@samgoddard.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
